fix: remove `$primary-color` & fix more styling issues for ms-select - removing SASS `$primary-color` (and keep only `$slick-primary-color`) since it could cause certain variables to not be overriden properly. I previously kept the `$primary-color` to make it easier for Bootstrap users but this is causing issues with the new SASS `@use` syntax - also more styling fixes to align with the rest of Bootstrap input form controls, note though that the fixes doesn't only apply to Bootstrap but other frameworks as well

--- a/packages/common/src/styles/_variables-theme-salesforce.scss
+++ b/packages/common/src/styles/_variables-theme-salesforce.scss
@@ -26,10 +26,11 @@ $slick-editor-grid-cell-border-width-modified:                  1px 7px 1px 1px 
   $slick-highlight-color:                                       #0070D2 !default,
   $slick-button-primary-bg-color:                               $slick-primary-color-dark !default,
   $slick-button-primary-color:                                  $slick-primary-color-dark !default,
-  $slick-icon-color:                                            inherit !default,
   $slick-checkbox-icon-font-size:                               20px !default,
   $slick-font-family:                                           var(--lwc-fontFamily,'Salesforce Sans', 'SalesforceSans-Regular', Arial, sans-serif) !default,
+  $slick-icon-color:                                            inherit !default,
   $slick-icon-font-size:                                        18px !default,
+  $slick-input-focus-border-color:                              color.adjust($slick-primary-color, $lightness: 12%) !default,
   $slick-cell-active-box-shadow:                                inset 0 0 0 1px #{$slick-highlight-color} !default,
   $slick-cell-border-top:                                       none !default,
   $slick-cell-border-bottom:                                    none !default,
